--- a/polling/templates/index.html
+++ b/polling/templates/index.html
@@ -4,7 +4,9 @@
 <div class="container">
     <div class="row">
         <div class="span2">
-            {% block sidebar %}{% include 'admin/sidebar.html' %}{% endblock %}
+            {% block sidebar %}
+                {% if user.is_authenticated %}{% include 'admin/sidebar.html' %}{% endif %}
+            {% endblock %}
         </div><!-- End .span2 -->
         <div class="span10">
             {% block main %}<!-- Main content -->{% endblock %}
