--- a/polling/templates/layout.html
+++ b/polling/templates/layout.html
@@ -18,14 +18,6 @@
 <script src="/static/js/ajaxsend.js"></script>
 
 
-<SCRIPT src="/static/js/pidscript/pidcrypt.js"></SCRIPT>
-<SCRIPT src="/static/js/pidscript/pidcrypt_util.js"></SCRIPT>
-<SCRIPT src="/static/js/pidscript/asn1.js"></SCRIPT><!--needed for parsing decrypted rsa certificate-->
-<SCRIPT src="/static/js/pidscript/jsbn.js"></SCRIPT><!--needed for rsa math operations-->
-<SCRIPT src="/static/js/pidscript/rng.js"></SCRIPT><!--needed for rsa key generation-->
-<SCRIPT src="/static/js/pidscript/prng4.js"></SCRIPT><!--needed for rsa key generation-->
-<SCRIPT src="/static/js/pidscript/rsa.js"></SCRIPT><!--needed for rsa en-/decryption-->
-
 {% block head %}<!-- Custom CSS and JS -->{% endblock %}
 </head>
 <body>
@@ -37,8 +29,10 @@
                         <div class="container">
                             <a class="brand" href="/">Система голосования за президента</a>
                             <ul class="nav pull-right">
-                                <li>{% if user.is_authenticated %}<a href="/admin/user/{{ user.id }}/">{{ user.username }}</a>{% endif %}</li>
-                                <li><a href="/logout/">Выход</a></li>
+                                {% if user.is_authenticated %}
+                                    <li><a href="/admin/user/{{ user.id }}/">{{ user.username }}</a></li>
+                                    <li><a href="/logout/">Выход</a></li>
+                                {% endif %}
                             </ul><!-- End .nav -->
                         </div><!-- End .container -->
                     </div><!-- End .navbar-inner -->
