--- a/polling/templates/poll.html
+++ b/polling/templates/poll.html
@@ -1,5 +1,5 @@
-{% extends 'layout.html' %}
-{% block content %}
+{% extends 'index.html' %}
+{% block main %}
 
 {% for field in form %}
 {{ field.label_tag }}: {{ field }}
@@ -25,8 +25,8 @@
 
         <div class="control-group">
             <div class="controls">
-                <button type="submit" class="btn btn-primary">Голосовать</button>
+                <button type="submit" class="btn btn-primary">Р“РѕР»РѕСЃРѕРІР°С‚СЊ</button>
             </div><!-- End .controls -->
         </div><!-- End .control-group -->
     </form>
-{% endblock %}
+{% endblock main %}
