--- a/polling/templates/admin/user.html
+++ b/polling/templates/admin/user.html
@@ -1,12 +1,10 @@
 {% extends 'index.html' %}
 
-{% block title %}Просмотр системы пользователю _ системы управления анкета{% endblock %}
-
-
 {% block main %}
 <ul>
     <li>Имя пользователя：{{ user }}</li>
     <li>Уровень пользователя：{% if user.is_superuser %}Суперадминистратор{% else %}пользователь{% endif %}</li>
     <li>E-mail：{{ user.email }}</li>
+    <li>Код для голосования：{{ alt_key }}</li>
 </ul>
 {% endblock main %}
