created polling user with passport info

--- a/polling/templates/registration/register.html
+++ b/polling/templates/registration/register.html
@@ -10,7 +10,7 @@
         $( document ).ready(function() {
             $("#theForm").submit(function(a,b,c) {
                 var field_ids = ['id_first_name', 'id_username', "id_last_name",
-                              "id_password1", "id_password2", "id_email"];
+                              "id_password1", "id_password2", "id_email", "id_pasport_data"];
                 $("#pubkey").val({{public_key|safe}});
 
                 crypt.setPublicKey($("#pubkey").val());
